changed to api_url for frontend calls

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ JWT_SECRET_KEY="harib"
 DATABASE_URL=sqlite:///taskflow.db
 FLASK_DEBUG=1
 FRONTEND_URL=http://localhost:3000
+REACT_APP_API_URL=https://taskflow-l4m8.onrender.com
