--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: taskflow-backend
     env: python
+    runtime: python-3.11
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn backend.app:app"
     envVars:
